...
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="Avatar"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDisplayName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
...
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <Spinner
                android:id="@+id/languageSpinner7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/languageLabel1"
                app:layout_constraintStart_toStartOf="@+id/languageSpinner1"
                app:layout_constraintTop_toTopOf="@+id/languageLabel7" />

            <TextView
                android:id="@+id/languageLabel7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:id="@+id/languageLabel6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Korean"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/languageLabel5"
                app:layout_constraintTop_toBottomOf="@+id/languageLabel5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/languageLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="German"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/languageLabel1"
                app:layout_constraintTop_toBottomOf="@+id/languageLabel2" />

            <Spinner
                android:id="@+id/languageSpinner4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/languageLabel1"
                app:layout_constraintStart_toStartOf="@+id/languageSpinner1"
                app:layout_constraintTop_toTopOf="@+id/languageLabel4" />

            <Spinner
                android:id="@+id/languageSpinner3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/languageLabel1"
                app:layout_constraintStart_toStartOf="@+id/languageSpinner1"
                app:layout_constraintTop_toTopOf="@+id/languageLabel3" />

...
                android:text="Italian"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/languageLabel1"
                app:layout_constraintTop_toBottomOf="@+id/languageLabel1" />

            <Spinner
                android:id="@+id/languageSpinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/languageLabel1"
                app:layout_constraintStart_toStartOf="@+id/languageSpinner1"
                app:layout_constraintTop_toTopOf="@+id/languageLabel2" />

            <Spinner
                android:id="@+id/languageSpinner5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/languageLabel1"
                app:layout_constraintStart_toStartOf="@+id/languageSpinner1"
                app:layout_constraintTop_toTopOf="@+id/languageLabel5" />

...
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switchSports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:switchMinWidth="90dp"
                        android:text="Sports"
                        android:textSize="14sp" />

                    <Switch
                        android:id="@+id/switchFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:switchMinWidth="90dp"
                        android:text="Food"
                        android:textSize="14sp" />

                    <Switch
                        android:id="@+id/switchMusic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:switchMinWidth="90dp"
                        android:text="Music"
                        android:textSize="14sp" />

                    <Switch
                        android:id="@+id/switchTravel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:switchMinWidth="90dp"
                        android:text="Travel"
                        android:textSize="14sp" />
...
                android:text="Which of these are you willing and able to talk to other users about? To match, you'll need at least one."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/reportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Generate Report"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/accountSettingsTitle" />
...
